--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.15.2"
+    "@fontsource/mochiy-pop-one": "^5.2.8",
+    "@lucide/astro": "^0.548.0",
+    "@tailwindcss/vite": "^4.1.16",
+    "astro": "^5.15.2",
+    "tailwindcss": "^4.1.16"
   }
 }
